Upgraded leaflet. Wow. Such improvement.

--- a/client/views/artists/show.html
+++ b/client/views/artists/show.html
@@ -1,16 +1,20 @@
 <template name="artistShow">
+	{{#if isAdmin}}
 	<div class="row">
-		{{#if isAdmin}}
-		<div class="pull-right">
-			<a class="btn btn-default btn-sm" href="{{pathFor "artistEdit"}}">
-				<i class="fa fa-wrench fa-2x"></i>
-			</a>
-			<a id="remove" class="btn btn-warning btn-sm" href="#">
-				<i class="fa fa-times fa-2x"></i>
-			</a>
+		<div class="container">
+			<div class="pull-right">
+				<a class="btn btn-default btn-sm" href="{{pathFor "artistEdit"}}">
+					<i class="fa fa-wrench fa-2x"></i>
+				</a>
+				<a id="remove" class="btn btn-warning btn-sm" href="#">
+					<i class="fa fa-times fa-2x"></i>
+				</a>
+			</div>
 		</div>
-		{{/if}}
+	</div>
+	{{/if}}
 
+	<div class="row">
 		<div class="media col-xs-12">
 			<img src="{{artistPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
 			<div class="media-body col-xs-12 col-sm-8">
@@ -19,6 +23,8 @@
 		</div>
 	</div>
 
+	<br>
+	
 	{{#if gigsToCome.count}}
 	<div class="row">
 		<div class="container">
