--- a/client/views/places/form.html
+++ b/client/views/places/form.html
@@ -28,7 +28,7 @@
 			<input type="hidden" class="form-control" id="address" value="{{address}}">
 
 			<div class="pull-right">
-				<button type="submit" class="btn btn-success"><i class="fa fa-floppy-o fa-lg"></i>&nbsp;&nbsp;Enregistrer</button>
+				<button type="submit" class="btn btn-warning"><i class="fa fa-floppy-o fa-lg"></i>&nbsp;&nbsp;Enregistrer</button>
 				<button type="button" id="cancel" class="btn btn-default">Annuler</button>
 			</div>
 		</form>
