--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -41,19 +41,13 @@
 
 <template name="userVote">
 	<div class="input-group">
-		<div class="rating">
-			<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
-		</div>
-	</div>
-	
-	<div class="input-group">
-		<div class="rateit" data-rateit-value="3"></div><br>
+		<div class="raty"></div>
 	</div>
 	
 	<div class="input-group">
 		<small>
 			<label>
-				<input type="checkbox" value="">
+				<input type="checkbox" value="" disabled="true">
 				Publier sur mon mur
 			</label>
 		</small>
