--- a/client/css/lamifa.css
+++ b/client/css/lamifa.css
@@ -7,7 +7,7 @@ html,
 body {
 	height: 100%;
 	/* The html and body elements cannot have any padding or margin. */
-	background-image: url("/img/grey.png");
+	background-image: url("/img/project_papper.png");
 	background-repeat: repeat;
 }
 
@@ -82,4 +82,8 @@ code {
 
 .modal-dialog {
 	left: 0;
+}
+
+.jumbotron {
+	background-color: white;
 }
