--- a/client/views/places/show.html
+++ b/client/views/places/show.html
@@ -3,16 +3,17 @@
 	<div class="row">
 		<div class="container">
 			<div class="pull-right">
-				<a class="btn btn-default btn-sm" href="{{pathFor "placeEdit"}}">
+				<a class="btn btn-warning btn-sm" href="{{pathFor "placeEdit"}}">
 					<i class="fa fa-wrench fa-2x"></i>
 				</a>
-				<a id="remove" class="btn btn-warning btn-sm" href="#">
+				<a id="remove" class="btn btn-danger btn-sm" href="#">
 					<i class="fa fa-times fa-2x"></i>
 				</a>
 			</div>
 		</div>
 	</div>
 	{{/if}}
+	
 	<div class="row">
 		<div class="media col-xs-12">
 			<img src="{{placePicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
