Weird bug on new gig form when coming from home.

--- a/client/views/posts/show.html
+++ b/client/views/posts/show.html
@@ -3,7 +3,7 @@
 		<div class="media-object pull-left">
 			<img src="{{ownerPicture}}" alt="" />
 		</div>
-		<div class="media-body">
+		<div class="media-body col-sm-6">
 			<blockquote>
 				{{#if isComment}}
 				{{content}}
