--- a/client/views/gigs/form.html
+++ b/client/views/gigs/form.html
@@ -23,9 +23,12 @@
 			</div>
 
 			<div class="form-group">
-				<label class="col-xs-4 control-label" for="date">Date&nbsp;:</label>
-				<div class="col-xs-8">
-					<div id="date"></div>
+				<label class="col-sm-4 control-label" for="date">Date&nbsp;:</label>
+				<div class="col-sm-8">
+					<div class='input-group date' id='date'>
+						<span class="input-group-addon"><span class="fa fa-calendar"></span></span>
+						<input type='text' class="form-control" />
+					</div>
 				</div>
 			</div>
 
