Places subscription to reflect map bounds. PlaceMatch test pending...

--- a/client/views/places/show.html
+++ b/client/views/places/show.html
@@ -54,7 +54,7 @@
 	<div class="row">
 		<div class="container">
 			<div class="page-header">
-				<h4>Évènements passés :</h4>
+				<h4>Évènements précédents :</h4>
 			</div>
 			<div class="col-sm-9">
 				<div class="list-group">
