--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -3,7 +3,7 @@
 	<div class="page-header">
 		<h4>Commentaires :</h4>
 	</div>
-	<div class="list-group">
+	<div class="list-group col-sm-8">
 		{{#each posts}}
 		{{>post}}
 		{{/each}}
